--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,10 +1,17 @@
+.Navbar-bg-dk {
+  background-color: #303444;
+  color: white;
+  border: none
+}
+.Navbar-bg {
+  border-bottom: 1px solid lightgray;
+}
+
 .Navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 4rem;
-  background-color: white;
-  border-bottom: 1px solid lightgray;
 }
 
 .Navbar-right {
