--- a/src/Country.css
+++ b/src/Country.css
@@ -7,8 +7,13 @@
   background-color: #282c34;
   color: white
 }
+.Country-container {
+  margin: 0 auto;
+  padding: 0 4rem;
+  max-width: 1440px;
+}
 .Country-btn, .Country-btn-dk:hover {
-  margin: 3rem 4rem 0 4rem;
+  margin-top: 3rem;
   border: none;
   box-shadow: 0px 0px 15px -5px #6E6E6E;
   background-color: white;
@@ -17,7 +22,7 @@
   color: black
 }
 .Country-btn-dk, .Country-btn:hover {
-  margin: 3rem 4rem 0 4rem;
+  margin-top: 3rem;
   border: none;
   background-color: #3e4355;
   border-radius: 5px;
@@ -25,19 +30,37 @@
   color: white
 }
 .Country-info {
-  margin: 3rem 4rem;
+  margin-top: 3rem;
   display: flex;
-  justify-content: space-between;
+}
+.Country-flag {
+  width: 40%;
+  margin-right: 5rem
 }
 .Country-details {
   display: flex;
   flex-direction: column;
+  width: 60%
 }
 .Country-details-mid {
-  display: flex
+  display: flex;
 }
-.Country-details h3, .Country-details span {
+.Country-details-mid-left {
+  width: 50%
+}
+.Country-details-mid-right {
+  width: 50%
+}
+.Country-details h3, .Country-details p {
   font-weight: 800;
+}
+.Country-details-borders {
+  display: flex;
+  margin-top: 3rem
+}
+.Country-details-borders-title {
+  width: 8rem;
+  margin-top: 10px
 }
 .BorderCountry-link, .BorderCountry-link-dk:hover {
   border: none;
@@ -45,7 +68,7 @@
   background-color: white;
   border-radius: 5px;
   padding: 0 20px;
-  margin: 10px 10px 0 0;
+  margin: 10px 10px 0 10px;
   color: black
 }
 .BorderCountry-link-dk, .BorderCountry-link:hover {
@@ -53,6 +76,9 @@
   background-color: #3e4355;
   border-radius: 5px;
   padding: 0 20px;
-  margin: 10px 10px 0 0;
+  margin: 10px 10px 0 10px;
   color: white
+}
+.Country-details-borders-btn > p {
+  margin: 10px 0 0 10px
 }
