--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -10,7 +10,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 0 auto;
   padding: 0.5rem 4rem;
+  max-width: 1440px;
 }
 .Navbar-right {
   display: flex;
