--- a/src/Country.css
+++ b/src/Country.css
@@ -1,9 +1,9 @@
 .Country-bg {
-  height: 90vh;
+  min-height: 95vh;
   background-color: #F5F5F5
 }
 .Country-bg-dk {
-  height: 90vh;
+  min-height: 95vh;
   background-color: #282c34;
   color: white
 }
