--- a/src/Countries.css
+++ b/src/Countries.css
@@ -18,13 +18,9 @@
   align-items: center;
 }
 .Countries {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(278px, 278px));
   justify-content: space-between;
-}
-.Countries::after {
-  content: "";
-  width: 630px
 }
 .Country-link {
   text-decoration: none;
@@ -46,7 +42,7 @@
   box-shadow: 0px 5px 10px 0px #e6e6e6;
   height: 340px;
   width: 278px;
-  margin: 2rem 0
+  margin: 2rem 0;
 }
 .card-dk {
   border: none;
@@ -55,7 +51,7 @@
   width: 278px;
   background-color: #3e4355;
   color: white;
-  margin: 2rem 0
+  margin: 2rem 0;
 }
 .card-img-top {
   width: 100%; 
@@ -68,7 +64,7 @@
   margin-bottom: 0
 }
 
-@media(max-width: 478px) {
+@media(max-width: 540px) {
   .Countries-container {
     padding: 0 1rem;
   }
@@ -82,5 +78,11 @@
   }
   .card, .card-dk {
     margin: 2rem auto
+  }
+}
+
+@media(min-width: 541px) and (max-width: 700px) {
+  .Countries-container {
+    padding: 0 2rem;
   }
 }
