--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -44,9 +44,9 @@
   font-weight: 600;
 }
 
-@media(max-width: 478px) {
+@media(max-width: 500px) {
   .Navbar {
-    padding: 0.5rem 1rem
+    padding: 0.5rem 2rem
   }
   .Navbar h2 {
     font-size: large;
@@ -57,5 +57,15 @@
   .Nav-icon {
     transform: scale(0.7);
     margin-right: 0;
+  }
+}
+@media(min-width: 501px) and (max-width: 670px) {
+  .Navbar {
+    padding: 0.5rem 1rem
+  }
+}
+@media(min-width: 671px) and (max-width: 740px) {
+  .Navbar {
+    padding: 0.5rem 2rem
   }
 }
